Add Google meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html> 
     <head> 
+        <meta name="google-site-verification" content="ZxagEFqeoMhJF9CWPTV5aUwvf8w1p9zBSJAYU5Laiu8" />
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/> 
         <title>Brady Hartog</title> 
         <link href="" rel="icon" type="image/x-icon"/>
