--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE HTML>
 <html> 
     <head> 
-        <meta name="google-site-verification" content="ZxagEFqeoMhJF9CWPTV5aUwvf8w1p9zBSJAYU5Laiu8" />
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/> 
         <title>Brady Hartog</title> 
-        <link href="" rel="icon" type="image/x-icon"/>
+        <link href="https://www.dropbox.com/s/kta5idm5h4v3ddt/Favicon%202.png?raw=1" rel="icon" type="image/x-icon"/>
+        <link rel="apple-touch-icon" href="https://www.dropbox.com/s/m2y9vm9bwoi3xqa/Apple%20Touch%20Icon.png?raw=1">
     </head> 
     
 <body>
-    <div id="text">
-        <div id="hello">
-        <p>Hello</p> 
+    <img src="https://www.dropbox.com/s/w7869tgt975ic9x/Cover%20Mobile.jpg?raw=1" id="cover-mobile"><!--
+ --><img src="https://www.dropbox.com/s/w69hd4qnwydjcul/Cover%20Desktop.jpg?raw=1" id="cover-desktop"><!--
+ --><div id="about">
+        <img src="https://www.dropbox.com/s/508v0jji8b5p1fr/About%20Img%20Mobile.png?raw=1" id="about-graphic"><!--
+     --><p id="intro">Welcome to the portfolio of Brady Hartog. Brady is a graphic designer with an appetite for challenge and a passion for excellence. When he's not designing, he's probably chowing down sushi or jamming on his synth. <br><img src="https://www.dropbox.com/s/vrb4x2xaodsx35m/Dot%20Stop.png?raw=1" id="dot-stop"><br> Feel free to browse the gallery below and check out my other social outlets. And when you're ready to design something great, don't hesitate to shoot me an email. I look forward to working with you! </p><!--
+      --><div id="icons">
+        <a href="http://www.instagram.com/bradyhartog/" target="_blank"><img src="https://www.dropbox.com/s/30ss9rmxa8glvxs/Instagram.png?raw=1" id="instagram"></a>
+        <a href="http://www.facebook.com/bradyhartogdesign/" target="_blank"><img src="https://www.dropbox.com/s/oxlit80wlwlbyro/Facebook.png?raw=1" id="facebook"></a>
+        <a href="mailto:brady@bradyhartog.com?Subject=Design%20Inquiry" target="_top"><img src="https://www.dropbox.com/s/7nq0uhrugbmj3m0/Mail.png?raw=1" id="email"></a>
+        <p id="address">brady@bradyhartog.com</p>
         </div>
-    
-        <div id="message">
-        <p>bradyhartog.com is currently under construction. Check back later!</p> 
-        </div>
-    </div>
+    </div><!--
+ --><div id="gallery">
+        <div id="notice"></div><!--
+     --><div class="design" id="d6"></div><!--
+     --><div class="design" id="d5"></div><!--
+     --><div class="design" id="d4"></div><!--
+     --><div class="design" id="d3"></div><!--
+     --><div class="design" id="d2"></div><!--
+    --><div class="design"><div class="info"><p class="title">bradyhartog Brand</p><p class="description">My personal brand. Developed under a strictly minimal vision. The logo takes on a full as well as a condensed form for optimal legibility across a variety of situations. The CMYK color scheme suggests creativity and originality.</p></div><img src="https://www.dropbox.com/s/bpjeeyqzfqbhg40/d1.jpg?raw=1" id="d1"></div>
+    </div><!--
+ --><div id="copyright"><p>&#169; 2016 Brady Hartog</p></div>
+
 </body> 
 </html>
