--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Brady Hartog</title> 
         <link href="https://www.dropbox.com/s/81ntmy2ek6mq3ko/Favicon%203.png?raw=1" rel="icon" type="image/x-icon"/>
         <link rel="apple-touch-icon" href="https://www.dropbox.com/s/m2y9vm9bwoi3xqa/Apple%20Touch%20Icon.png?raw=1">
+        <script>
+        document.addEventListener("touchstart", function() {},false);
+        </script>
     </head> 
     
 <body>
