--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <body>
     <img src="Images/Cover%20Mobile.jpg" id="cover-mobile"><!--
- --><img src="Images/Cover%20Desktop%20Wide%20Web.jpg" id="cover-desktop"><!--
+ --><div id="overflow-wrapper"><img src="Images/Cover%20Desktop%20Wide%20Web.jpg" id="cover-desktop"></div><!--
  --><div id="about">
         <img src="Images/About.png" id="about-graphic"><!--
      --><p id="intro">Welcome to the portfolio of Brady Hartog.<br>Brady is an experienced graphic designer with an appetite for challenge and a passion for excellence. When he's not designing, he's probably chowing down sushi or jamming on his synth. <br><img src="Images/Dot%20Stop.png" id="dot-stop"><br> Feel free to browse the gallery below and check out my other social outlets. And when you're ready to design something great, don't hesitate to shoot me an email. I look forward to working with you! </p><!--
