--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  --><div id="overflow-wrapper"><img src="Images/Cover%20Desktop%20Wide%20Web.jpg" id="cover-desktop"></div><!--
  --><div id="about">
         <img src="Images/About.png" id="about-graphic"><!--
-     --><p id="intro">Welcome to the portfolio of Brady Hartog.<br>Brady is an experienced graphic designer with an appetite for challenge and a passion for excellence. When he's not designing, he's probably chowing down sushi or jamming on his synth. <br><img src="Images/Dot%20Stop.png" id="dot-stop"><br> Feel free to browse the gallery below and check out my other social outlets. And when you're ready to design something great, don't hesitate to shoot me an email. I look forward to working with you! </p><!--
+     --><p id="intro">Welcome to the portfolio of Brady Hartog.<br>Brady is a strongly experienced graphic designer with an appetite for challenge and a passion for excellence. When he's not designing, he's probably chowing down sushi or jamming on his synth. <br><img src="Images/Dot%20Stop.png" id="dot-stop"><br> Feel free to browse the gallery below and check out my other social outlets. And when you're ready to design something great, don't hesitate to shoot me an email. I look forward to working with you! </p><!--
       --><div id="icons">
         <a href="http://www.instagram.com/bradyhartog/" target="_blank"><img src="Images/Instagram.png" id="instagram"></a>
         <a href="http://www.facebook.com/bradyhartogdesign/" target="_blank"><img src="Images/Facebook.png" id="facebook"></a>
