--- a/html/about.html
+++ b/html/about.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html> 
     <head> 
-        <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/> 
+        <link type="text/css" rel="stylesheet" href="../css/about.css"/> 
         <title>Brady Hartog</title>
     </head> 
     
 <body>
     <div id="text">
         <div id="hello">
-        <p><a href="html/about.html">Hello.</a></p>
+        <p>About</p> 
         </div>
     
         <div id="message">
-        <p>bradyhartog.com is currently under construction. Check back later!</p> 
+        <p>Lorem ipsum dolor, consectetur sit amet.</p> 
         </div>
     </div>
 </body> 
