--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html> 
     <head> 
-        <link type="text/css" rel="stylesheet" href="../css/about.css"/> 
+        <link type="text/css" rel="stylesheet" href="about.css"/> 
         <title>Brady Hartog</title>
     </head> 
     
