--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html> 
     <head> 
-        <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/> 
+        <link type="text/css" rel="stylesheet" href="stylesheet.css"/> 
         <title>Brady Hartog</title>
     </head> 
     
 <body>
     <div id="text">
         <div id="hello">
-        <p><a href="html/about.html">Hello.</a></p>
+        <p><a href="about.html">Hello.</a></p>
         </div>
     
         <div id="message">
