--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="text">
         <div id="hello">
-        <p><a href="about.html">Hello.</a></p>
+        <p>Hello.</p>
         </div>
     
         <div id="message">
