--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
     
         <div id="message">
-        <p>bradyhartog.com is currently under construction. Check back later!</p> 
+        <p>Brady’s website is currently being updated. Check back later!</p> 
         </div>
     </div>
 </body> 
