--- a/work/engineering/inertial-navigation-model.html
+++ b/work/engineering/inertial-navigation-model.html
@@ -77,7 +77,7 @@
             
             <div class="descriptor">
                 <p class="descriptor-title">Outcome</p>
-                <p class="descriptor-body">Outcome: The new model accurately determines the angular orientation of tool bodies to within 1° and better. This meets the design specification of 2° and better and improves from 7° and better with the existing system.</p>
+                <p class="descriptor-body">The new model accurately determines the angular orientation of tool bodies to within 1° and better. This meets the design specification of 2° and better and improves from 7° and better with the existing system.</p>
             </div>
             
             <!--<p class="article-body">See also this project’s <a>presentation</a>.</p>-->
