--- a/work/engineering/imaging-panel-power-network.html
+++ b/work/engineering/imaging-panel-power-network.html
@@ -81,6 +81,12 @@
             </div>
             
             <!--<p class="article-body">See also this project’s <a>presentation</a>.</p>-->
+
+            <div class="article-item">
+                <img class="article-image", src="Images/imaging-panel-power-network/illustration.jpg">
+
+                <p class="caption">Illustration of the process by which multiple switching regulator devices are consolidated into a single device.</p>
+            </div>
             
             <p id="copyright-mobile">&#169; 2020 Brady Hartog</p>
         </div>
