--- a/work/engineering/imaging-panel-power-network.html
+++ b/work/engineering/imaging-panel-power-network.html
@@ -55,7 +55,7 @@
             <h2 class="article-subtitle">Varex Imaging Corporation — 2019</h2>
             
             <div class="article-section">
-                <p class="section-body">A circuit system for supplying power to fluoroscopic imaging panels.</p>
+                <p class="section-body">An optimized circuit system for supplying power to fluoroscopic imaging panels.</p>
             </div>
         
             <div class="article-section">
