--- a/work/engineering/battery-installation-protocol.html
+++ b/work/engineering/battery-installation-protocol.html
@@ -60,6 +60,11 @@
                 <p class="article-body">This page is currently in progress. Please check back soon!</p>
             </div>
             
+            <div class="article-item">
+                <img class="article-image", src="Images/battery-installation-protocol/bulletin.jpg">
+                <p class="caption">The final product.</p>
+            </div>
+            
             <p id="copyright-mobile">&#169; 2020 Brady Hartog</p>
         </div>
     </div>
