Changed tab title

--- a/work/design/mark-i-synthesizer.html
+++ b/work/design/mark-i-synthesizer.html
@@ -4,7 +4,7 @@
         <link type="text/css" rel="stylesheet" href="../../work.css"/>
         <link href="../../Images/Favicon.png" rel="icon" type="image/x-icon"/>
         <link rel="apple-touch-icon" href="../../Images/Apple%20Touch%20Icon.png">
-        <title>Brady Hartog | Photos</title>
+        <title>Brady Hartog | Design</title>
         
         <script type=text/javascript>
             function showWorkMenu() {
