Attempted fix of homepage redirect.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url='https://www.bradyhartog.com/engineering/engineering.html'"/>
+		<meta http-equiv="refresh" content="0; url='http://www.bradyhartog.com/engineering/engineering.html'"/>
 		<script src='/index.js'></script>
 	</head>
 	<body>
