Add favicon and correct mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <title>Brady Hartog</title>
     <link type='text/css' rel='stylesheet' href='index.css'/>
-    <link type='image/x-icon' rel='icon' href=''/>
-    <link rel='apple-touch-icon' href=''>
+    <link type='image/x-icon' rel='icon' href='assets/logo/logo-dark.png'/>
   </head>
   <body>
     <div id='nav'>
