Change to light scheme

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Brady Hartog</title>
     <link type='text/css' rel='stylesheet' href='index.css'/>
-    <link type='image/x-icon' rel='icon' href='assets/logo/logo-dark.png'/>
+    <link type='image/x-icon' rel='icon' href='assets/graphics/favicon.png'/>
   </head>
   <body>
     <div id='nav'>
       <div id='nav-logo-wrapper'>
-        <img id='nav-logo' src='assets/logo/logo-light.svg'>
+        <img id='nav-logo' src='assets/logo/logo-deep.svg'>
       </div>
     </div>
     <div class='content'>
@@ -152,7 +152,7 @@
       </div>
       <div id='footer'>
         <p id='copyright'>&#169;&thinsp;&thinsp;&thinsp;&thinsp;2022 Brady Hartog</p>
-        <img id='footer-logo' src='assets/logo/logo-dark.svg'>
+        <img id='footer-logo' src='assets/logo/logo-mid.svg'>
       </div>
     </div>
   </body>
