Update to splash-only site

--- a/index.html
+++ b/index.html
@@ -3,157 +3,32 @@
   <head>
     <title>Brady Hartog</title>
     <link type='text/css' rel='stylesheet' href='index.css'/>
-    <link type='image/x-icon' rel='icon' href='assets/graphics/favicon.png'/>
+    <link type='image/x-icon' rel='icon' href='assets/graphics/icon.png'/>
+    <link rel='apple-touch-icon' href='assets/graphics/icon.png'>
   </head>
   <body>
-    <div id='nav'>
-      <div id='nav-logo-wrapper'>
-        <img id='nav-logo' src='assets/logo/logo-deep.svg'>
-      </div>
-    </div>
-    <div class='content'>
-      <div id='gallery'>
-        <div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0173-diffuse.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0172-pressure.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0171-pahaska-mountain.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0170-self-portrait-2021.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0169-uinta-autumn.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0168-late-summer-rowan.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0167-purity.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0166-succulent-from-above-ii.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0165-midnight-glance.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0164-tahoe-bush.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0163-tahoe-water.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0162-tahoe-ridge.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0161-brisk.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0160-summer-bouquet.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0159-cannon-beach.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0158-amaryllis.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0157-short-beach.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0156-dawn-at-snowbird.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0155-iron-blosam-lodge.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0154-cascade-head.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0153-floppies.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0152-tolomeo.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0151-flare.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0150-forest-alcove.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0149-blue-fence.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0148-bella-and-bouquet.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0147-wardrobe-wheel.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0146-around-the-block.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0145-design-in-the-making.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0144-arrival.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0143-bella-at-the-atlantic.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0142-georgetown-palmetto.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0141-scholastic-faux-pas.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0140-between-the-fields.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0139-silicon-blaze.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0138-morning-music.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0137-prometheus-tools.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0136-plastic-algorithm.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0135-tipping-point.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0134-sitting-in-the-spline.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0133-snapshot-on-the-coast.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0132-convergence.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0131-lab-by-evening.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0130-grand-court.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div><div class='photo-wrapper'>
-          <img class='photo' src='assets/photos/0129-golden-wall.jpg'>
-          <img class='shadow' src='assets/graphics/shadow.png'>
-        </div>
-      </div>
-      <div id='footer'>
-        <p id='copyright'>&#169;&thinsp;&thinsp;&thinsp;&thinsp;2022 Brady Hartog</p>
-        <img id='footer-logo' src='assets/logo/logo-mid.svg'>
-      </div>
+    <div id='content'>
+      <table id='elements'>
+        <tr id='header'>
+          <td id='title'>Brady Hartog</td>
+          <td id='subtitle'>Product Design<br>and Engineering</td>
+        </tr>
+        <tr id='footer'>
+          <td id='social'>
+            <a href='https://www.instagram.com/bradyhartog/' target='_blank'>
+              <div class='social-selector'>
+                <img class='social-icon' id='instagram' src='assets/social/instagram.svg'>
+              </div>
+            </a>
+            <a href='https://www.linkedin.com/in/bradyhartog/' target='_blank'>
+              <div class='social-selector'>
+                <img class='social-icon' id='linkedin' src='assets/social/linkedin.svg'>
+              </div>
+            </a>
+          </td>
+          <td id='copyright'>&#169;<span style='padding-left:0.1em;'></span>2022</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
