Update font and art

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Brady Hartog</title>
-    <link type='text/css' rel='stylesheet' href='index.css'/>
+    <link type='text/css' rel='stylesheet' href='css/main.css'/>
     <link type='image/x-icon' rel='icon' href='assets/graphics/icon.png'/>
     <link rel='apple-touch-icon' href='assets/graphics/icon.png'>
   </head>
