Publish portfolio, add email social button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <img class='social-icon' id='linkedin' src='assets/social/linkedin.svg'>
               </div>
             </a>
+            <a href='mailto:brady@bradyhartog.com' target='_top'>
+              <div class='social-selector'>
+                <img class='social-icon' id='mail' src='assets/social/mail.svg'>
+              </div>
+            </a>
           </td>
           <td id='copyright'>&#169;<span style='padding-left:0.1em;'></span>2023</td>
         </tr>
