--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link type='text/css' rel='stylesheet' href='css/main.css'/>
     <link type='image/x-icon' rel='icon' href='assets/graphics/icon.png'/>
     <link rel='apple-touch-icon' href='assets/graphics/icon.png'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   </head>
   <body>
     <div id='content'>
